--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="main">
         <header id="title">
-            <h1>dr. norman borlaug</h1>
+            <h1>Linus Torvalds</h1>
             <p>The man who saved a billion lives</p>
         </header>
         <section id="img-div">
