Change the colors

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="main">
         <header id="title">
             <h1>Linus Torvalds</h1>
-            <p>The man who saved a billion lives</p>
+            <p>the linux creator</p>
         </header>
         <section id="img-div">
             <figure>
