Change some tag

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="main">
         <header id="title">
             <h1>Linus Torvalds</h1>
-            <p>the creator and the principal developer of Linux and Git</p>
+            <h2>the creator and the principal developer of Linux and Git</h2>
         </header>
         <section id="img-div">
             <figure>
@@ -101,10 +101,10 @@
                 <cite>-- Indian Prime Minister Manmohan Singh</cite>
             </section>
         </section>
-        <footer id="more">
+        <h2 id="more">
             If you have time, you should read more about this incredible human being on his <a
                 href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">Wikipedia entry</a>.
-        </footer>
+        </h2>
     </div>
 </body>
 
