Change the image and the description

--- a/index.html
+++ b/index.html
@@ -18,14 +18,12 @@
         </header>
         <section id="img-div">
             <figure>
-                <img src="img/img-important.jpg" alt="dr. norman borlaug" id="image">
-                <figcaption id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how
-                    to increase
-                    wheat yields - part of his life-long war on hunger.</figcaption>
+                <img src="img/Linus.jpg" alt="Linus Torwald receiving 2018 IEEE Masaru Ibuka Consumer Electronics Award" id="image">
+                <figcaption id="img-caption">Linus Torvalds receiving 2018 IEEE Masaru Ibuka Consumer Electronics Award</figcaption>
             </figure>
         </section>
         <section id="tribute-info">
-            <h2 id="info-title">Here's a time line of Dr. Borlaug's life:</h2>
+            <h2 id="info-title">Here's a time line of Linus Torvalds:</h2>
             <ul id="history">
                 <li>
                     <strong>1914</strong> - Born in Cresco, Iowa
