Update the timeline

--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
         </header>
         <section id="img-div">
             <figure>
-                <img src="img/Linus.jpg" alt="Linus Torwald receiving 2018 IEEE Masaru Ibuka Consumer Electronics Award" id="image">
-                <figcaption id="img-caption">Linus Torvalds receiving 2018 IEEE Masaru Ibuka Consumer Electronics Award</figcaption>
+                <img src="img/Linus.jpg" alt="Linus Torwald receiving 2018 IEEE Masaru Ibuka Consumer Electronics Award"
+                    id="image">
+                <figcaption id="img-caption">Linus Torvalds receiving 2018 IEEE Masaru Ibuka Consumer Electronics Award
+                </figcaption>
             </figure>
         </section>
         <section id="tribute-info">
             <h2 id="info-title">Here's a time line of Linus Torvalds:</h2>
             <ul id="history">
                 <li>
-                    <strong>1914</strong> - Born in Cresco, Iowa
+                    <strong>1969</strong> - Born in Helsinki, Finland
                 </li>
                 <li>
-                    <strong>1933</strong> - Leaves his family's farm to attend the University of Minnesota, thanks to a
-                    Depression era program known as the "National Youth Administration"
+                    <strong>1988 to 1966</strong> - he studied at the University of Helsinki
                 </li>
                 <li>
-                    <strong>1935</strong> - Has to stop school and save up more money. Works in the Civilian
-                    Conservation Corps, helping starving Americans. "I saw how food changed them", he said. "All of this
-                    left scars on me."
+                    <strong>1991</strong> - he purchased the Intel 80386-based IBM PC and obtained a MINIX operating
+                    system. With this, he began to work and research on the Linux operating system.
                 </li>
                 <li>
                     <strong>1937</strong> - Finishes university and takes a job in the US Forestry Service
