Update the timeline 2.0

--- a/index.html
+++ b/index.html
@@ -38,17 +38,16 @@
                     system. With this, he began to work and research on the Linux operating system.
                 </li>
                 <li>
-                    <strong>1937</strong> - Finishes university and takes a job in the US Forestry Service
+                    <strong>1996</strong> - he went on a visit to the technology firm, ‘Transmeta’, where he began to
+                    work from the following year. He later worked for the Open Source Development Labs.
                 </li>
                 <li>
-                    <strong>1938</strong> - Marries wife of 69 years Margret Gibson. Gets laid off due to budget cuts.
-                    Inspired by Elvin Charles Stakman, he returns to school study under Stakman, who teaches him about
-                    breeding pest-resistent plants.
+                    <strong>1997 to 1999</strong> - From 1997 to 1999, he worked on the '86open' project, which is a
+                    binary file format for the ‘Unix’ and Unix-like operating systems. They were to be used on a common
+                    x86 PC.
                 </li>
                 <li>
-                    <strong>1941</strong> - Tries to enroll in the military after the Pearl Harbor attack, but is
-                    rejected. Instead, the military asked his lab to work on waterproof glue, DDT to control malaria,
-                    disinfectants, and other applied science.
+                    <strong>1998</strong> - he was a recipient of the EFF Pioneer Award.
                 </li>
                 <li>
                     <strong>1942</strong> - Receives a Ph.D. in Genetics and Plant Pathology
