--- a/index.html
+++ b/index.html
@@ -50,16 +50,19 @@
                     <strong>1998</strong> - he was a recipient of the EFF Pioneer Award.
                 </li>
                 <li>
-                    <strong>1942</strong> - Receives a Ph.D. in Genetics and Plant Pathology
+                    <strong>1999</strong> - he was offered stock options for his creation by the companies, Red Hat and
+                    VA Linux. That very year, the stock prices increased to about $20 million after the companies went
+                    public
+                    and he was given the title of 'one of the top 100 innovators, under the age of 35, in the world' by
+                    MIT Technology Review TR100.
                 </li>
                 <li>
-                    <strong>1944</strong> - Rejects a 100% salary increase from Dupont, leaves behind his pregnant wife,
-                    and flies to Mexico to head a new plant pathology program. Over the next 16 years, his team breeds
-                    6,000 different strains of disease resistent wheat - including different varieties for each major
-                    climate on Earth.
+                    <strong>2000</strong> - he was the recipient of the Lovelace Medal, which was conferred by the
+                    British Computer Society.
                 </li>
                 <li>
-                    <strong>1945</strong> - Discovers a way to grown wheat twice each season, doubling wheat yields
+                    <strong>2001</strong> - along with Richard Stallman and Ken Sakamura, he shared the Takeda Award for
+                    Social/Economic Well-Being.
                 </li>
                 <li>
                     <strong>1953</strong> - crosses a short, sturdy dwarf breed of wheat with a high-yeidling American
