Update the final timeline

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
                     <strong>1969</strong> - Born in Helsinki, Finland
                 </li>
                 <li>
-                    <strong>1988 to 1966</strong> - he studied at the University of Helsinki
+                    <strong>1988 to 1966</strong> - Studied at the University of Helsinki
                 </li>
                 <li>
-                    <strong>1991</strong> - he purchased the Intel 80386-based IBM PC and obtained a MINIX operating
+                    <strong>1991</strong> - Purchased the Intel 80386-based IBM PC and obtained a MINIX operating
                     system. With this, he began to work and research on the Linux operating system.
                 </li>
                 <li>
-                    <strong>1996</strong> - he went on a visit to the technology firm, ‘Transmeta’, where he began to
+                    <strong>1996</strong> - Went on a visit to the technology firm, ‘Transmeta’, where he began to
                     work from the following year. He later worked for the Open Source Development Labs.
                 </li>
                 <li>
@@ -47,51 +47,39 @@
                     x86 PC.
                 </li>
                 <li>
-                    <strong>1998</strong> - he was a recipient of the EFF Pioneer Award.
+                    <strong>1998</strong> - Was a recipient of the EFF Pioneer Award.
                 </li>
                 <li>
-                    <strong>1999</strong> - he was offered stock options for his creation by the companies, Red Hat and
+                    <strong>1999</strong> - Was offered stock options for his creation by the companies, Red Hat and
                     VA Linux. That very year, the stock prices increased to about $20 million after the companies went
                     public
                     and he was given the title of 'one of the top 100 innovators, under the age of 35, in the world' by
                     MIT Technology Review TR100.
                 </li>
                 <li>
-                    <strong>2000</strong> - he was the recipient of the Lovelace Medal, which was conferred by the
+                    <strong>2000</strong> - Was the recipient of the Lovelace Medal, which was conferred by the
                     British Computer Society.
                 </li>
                 <li>
-                    <strong>2001</strong> - along with Richard Stallman and Ken Sakamura, he shared the Takeda Award for
+                    <strong>2001</strong> - Along with Richard Stallman and Ken Sakamura, he shared the Takeda Award for
                     Social/Economic Well-Being.
                 </li>
                 <li>
-                    <strong>1953</strong> - crosses a short, sturdy dwarf breed of wheat with a high-yeidling American
-                    breed, creating a strain that responds well to fertilizer. It goes on to provide 95% of Mexico's
-                    wheat.
+                    <strong>2005</strong> - Developed the software, ‘Git’.
                 </li>
                 <li>
-                    <strong>1962</strong> - Visits Delhi and brings his high-yielding strains of wheat to the Indian
-                    subcontinent in time to help mitigate mass starvation due to a rapidly expanding population
+                    <strong>2008</strong> - Become an inductee into the Hall of Fellows of the Computer History Museum
+                    in Mountain View, California.
                 </li>
                 <li>
-                    <strong>1970</strong> - receives the Nobel Peace Prize
+                    <strong>2010</strong> - Was awarded the C&C Prize by the NEC Corporation.
                 </li>
                 <li>
-                    <strong>1983</strong> - helps seven African countries dramatically increase their maize and sorghum
-                    yields
-                </li>
-                <li>
-                    <strong>1984</strong> - becomes a distinguished professor at Texas A&M University
-                </li>
-                <li>
-                    <strong>2005</strong> - states "we will have to double the world food supply by 2050." Argues that
-                    genetically modified crops are the only way we can meet the demand, as we run out of arable land.
-                    Says that GM crops are not inherently dangerous because "we've been genetically modifying plants and
-                    animals for a long time. Long before we called it science, people were selecting the best breeds."
-                </li>
-                <li>
-                    <strong>2009</strong> - dies at the age of 95.
-                </li>
+                    <strong>2012</strong> - Stated that his contribution to the Linux kernel mostly involved merging
+                    codes that were already written by others and did not involve much programming.
+                    Was inducted into the Internet Hall of Fame and
+                    was one of the recipients of the Millennium Technology Prize.
+                    </stated>
             </ul>
             <section id="cit">
                 <blockquote>
