Finished... For now

--- a/index.html
+++ b/index.html
@@ -83,15 +83,14 @@
             </ul>
             <section id="cit">
                 <blockquote>
-                    "Borlaug's life and achievement are testimony to the far-reaching contribution that one man's
-                    towering intellect, persistence and scientific vision can make to human peace and progress.""
+                    "Most of the good programmers do programming not because they expect to get paid or get adulation by the public, but because it is fun to program."
                 </blockquote>
-                <cite>-- Indian Prime Minister Manmohan Singh</cite>
+                <cite>-- Linus Torvalds</cite>
             </section>
         </section>
         <h2 id="more">
-            If you have time, you should read more about this incredible human being on his <a
-                href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">Wikipedia entry</a>.
+            If you have time, you should read more about this incredible man being on his <a
+                href="https://en.wikipedia.org/wiki/Linus_Torvalds?oldformat=true" target="_blank">Wikipedia entry</a>.
         </h2>
     </div>
 </body>
