Added and imported font.css

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <section id="img-div">
             <figure>
                 <img src="img/Linus.jpg" alt="Linus Torwald receiving 2018 IEEE Masaru Ibuka Consumer Electronics Award"
-                    id="image">
-                <figcaption id="img-caption">Linus Torvalds receiving 2018 IEEE Masaru Ibuka Consumer Electronics Award
+                    id="image" class="center-element">
+                <figcaption id="img-caption" class="center-element">Linus Torvalds receiving 2018 IEEE Masaru Ibuka Consumer Electronics Award
                 </figcaption>
             </figure>
         </section>
