--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="style/reset.css">
     <link rel="stylesheet" type="text/css" href="style/style.css">
+    <!--Google Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Cantarell|Roboto|Ubuntu&display=swap" rel="stylesheet">
     <title>Tribute Page</title>
 </head>
 
