--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             <figure>
                 <img src="img/Linus.jpg" alt="Linus Torwald receiving 2018 IEEE Masaru Ibuka Consumer Electronics Award"
                     id="image" class="center-element">
-                <figcaption id="img-caption" class="center-element">Linus Torvalds receiving 2018 IEEE Masaru Ibuka Consumer Electronics Award
+                <figcaption id="img-caption" class="center-element">Linus Torvalds receiving 2018 IEEE Masaru Ibuka
+                    Consumer Electronics Award
                 </figcaption>
             </figure>
         </section>
@@ -85,7 +86,8 @@
             </ul>
             <section id="cit">
                 <blockquote>
-                    "Most of the good programmers do programming not because they expect to get paid or get adulation by the public, but because it is fun to program."
+                    "Most of the good programmers do programming not because they expect to get paid or get adulation by
+                    the public, but because it is fun to program."
                 </blockquote>
                 <cite>-- Linus Torvalds</cite>
             </section>
